# perfin

./: .gitignore  Cargo.toml  README.md
examples/: auth.rs  format_ing.rs  formats.rs  info.rs  init.rs  ledger.rs  money-rounding.rs  money.rs  re.rs  read_ing.rs.disabled  relations.rs  uuid.rs
src/: html_template_renderer.rs  lib.rs  main.rs  perfin_app.rs
src/bank_formats/: error.rs  mod.rs
src/bank_formats/ing/: definitions.rs  description_properties.rs  import.rs  mod.rs
src/handlers/: farewell.rs  greeting.rs  index.rs  mod.rs  refresh_templates.rs  render_html_template.rs  resource_content.rs  store_file.rs
src/handlers/transactions/: import.rs  mod.rs  upload.rs
src/models/: account.rs  assign_by_contract_definition.rs  assign_by_description.rs  assign_by_name_search.rs  bank_account.rs  bank_format.rs  bank_transaction.rs  cost_center.rs  journal.rs  journal_entry.rs  mod.rs  period.rs  relation.rs
src/repositories/: accounts.rs  accounts_repository.rs  bank_formats.rs  bank_statements.rs  cost_centers_repository.rs  journal_repository.rs  ledger.rs  mod.rs  relations_repository.rs  repository.rs
src/util/: content_type.rs  mod.rs
templates/: index.hbs  statements_import.hbs  upload_result.hbs
templates/partials/: accounts_dropdown.hbs  accounts_list.hbs  collapse_handle.hbs  footer.hbs  page.hbs  resources.hbs  script_node.hbs  script_node_folder.hbs  script_node_script.hbs  script_nodes.hbs  scripts.hbs
www/: index.html
www/scripts/: actions.js  collapsables.js  filedrop.js  prism-expanded.js  prism.js  sources.js  upload_result.js
www/styles/: bank_transactions.css  greeting.css  perfin.css  pres-expander.css  prism.css  tree-structure.css
