[package]
name = "perfin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
csv="1.1"
indexmap = { version= "1.9", features = ["serde"]}
chrono={version = "0.4", features = ["serde"] }
thiserror="1"
sha2 = "0"
base16ct={ version = "0", features = ["alloc"] }
regex="1"
rusty-money = { version = "0.4", features = ["iso"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-float"] }
num-traits = "0.2"

gotham = "0.7"
gotham_restful = "0"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
handlebars = "4"
futures = "0.3"
futures-threadpool = "0.1"
hyper = "0.14"
http = "0.2"
axum = { version = "0", features = ["multipart", "headers"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0", features = ["fs", "trace", "set-header"] }
rand = "0"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
