[package]
name = "perfin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
tokio = { version = "1.19.2", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
http = "0.2.8"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.12", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace", "set-header"] }
axum = { version = "0.5.10", features = ["multipart", "headers"] }
headers = "0.3"
oauth2 = "4.2"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
url = { version = "2.1", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
csv = "1.1.6"

sha2 = "0.10.2"
base16ct = { version = "0.1.1", features = ["alloc"] }

indexmap = { version = "1.9.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
thiserror = "1.0.31"
regex = "1.5.6"
lazy-regex = "2.3.0"
rand = "0.8.5"

rusty-money = { version = "0.4.1", features = ["iso"] }
rust_decimal = { version = "1.25.0", features = ["serde", "serde-with-float"] }
num-traits = "0.2.15"

handlebars = "4.3.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
